# gpresult

./: .gitignore  404.html  README.md  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  example_2formatted_show-example.html  example_2formatted_show_8md-example.html  example_2formatted_show_8txt-example.html  examples.html  examples.js  files.html  gpoa  gpr__get__policies_8py.html  gpr__show_8py.html  gpr__show_8py.js  gpr_get_policies.py  gpresult.py  gpresult.spec  gpresult_8py.html  hatch_build.py  index.html  latest  mkdocs.yml  navtreedata.js  navtreeindex0.js  pages.html  pyproject.toml  requirements.txt  sitemap.xml  todo.html  update_locales.sh  versions.json  ~
.forgejo/workflows/: docs.yaml  lint.yaml
.github/workflows/: build.yml  doc.yml
0.0.3-alt1/: 404.html  index.html  sitemap.xml
0.0.3-alt1/en/: index.html
0.0.3-alt1/search/: search_index.json
0.0.7-alt1/: 404.html  index.html  sitemap.xml
0.0.7-alt1/en/: index.html
0.0.7-alt1/search/: search_index.json
0.0.7-alt1/stylesheets/: extra.css
0.1.0-alt1/: 404.html  index.html  sitemap.xml
0.1.0-alt1/en/: index.html
0.1.0-alt1/search/: search_index.json
backend/: __init__.py
completions/: gpresult
doc/: doc.conf  header.html
doc/example/: formatted_show  verbose_show.txt
doc/html/: bug.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  gpr__get__policies_8py.html  gpr__get__policies_8py.js  index.html  namespacegpr__show.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  pages.html  todo.html
doc/html/search/: all_1.js  all_2.js  files_0.js  functions_0.js  namespaces_0.js  searchdata.js  variables_0.js
doc/latex/: bug.tex  files.tex  gpr__get__policies_8py.tex  namespacegpr__show.tex  namespaces.tex  refman.tex  todo.tex
docs/: index.en.md  index.md
en/: index.html
examples/: gpresult_2023-09-14_11:07:41.613077.html  gpresult_2023-09-14_11:07:41.613077.json
frontend/: firefox_applier.py
gpresult/: GPO.py  KeyValue.py  gpr_get_policies.py  gpr_html.py  gpr_init.py  gpr_show.py  gpr_system.py  gpresult.py  mkdocs.yml
gpresult/Preferences/: BasePreference.py  Drive.py  EnvVar.py  File.py  Folder.py  Inifile.py  Networkshare.py  Preference.py  Shortcut.py
gpresult/assets/: gpr_html.css  gpr_html.js
gpresult/docs/en/: index.md
html/templates/: report.html
latest/: 404.html  index.html
latest/en/: index.html
locales/: gpresult.pot  ru.po
locales/ru/: gpresult.po
messages/: __init__.py
plugin/: adp.py
report/: __init__.py  event.py  gpo.py  pol.py  rep.py
search/: all_0.js  all_1.js  all_4.js  all_6.js  files_0.js  functions_0.js  search_index.json  searchdata.js
src/: gpr_get_policies.py  gpr_show.py  gpr_system.py  gpresult.py
util/: config.py  logging.py  util.py
(+58 files in other folders)
