[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpresult"
version = "0.0.3"
dependencies = [
  "python-gettext",
  "distro",
]
requires-python = ">=3.8"
authors = [
  {name = "Maria Alexeeva", email = "alxvmr@altlinux.com"},
]
maintainers = [
  {name = "Maria Alexeeva", email = "alxvmr@altlinux.com"},
]
description = "Display applied policies"
readme = "README.md"
license = {text = "GPLv3+"}

[project.urls]
Repository = "https://github.com/alxvmr/gpresult"

[project.scripts]
gpresult = "gpresult.gpresult:main"

[tool.hatch.build.targets.wheel]
packages = ["gpresult"]

[tool.hatch.build.targets.wheel.force-include]
"locales" = "gpresult/locales"
